# snacc

./: .gitignore  README.md  notes.md
snacc/: CMakeLists.txt  CMakePresets.json  snacc.cpp
snacc/old_code/: main.cpp  snacc.h
snacc/old_code/health_check/proto/: heartbeat.grpc.pb.cc  heartbeat.pb.h  heartbeat.proto
snacc/old_code/health_check/worker/: heartbeat_client.cpp
snacc_vs/: CMakeLists.txt  CMakePresets.json  main.cpp  snacc_vs.cpp  snacc_vs.h  student.pb.cc  student.pb.h  student.proto
snacc_vs/master/: CMakeLists.txt  master_main.cpp  master_service_impl.cpp
snacc_vs/old_code/health_check/: CMakeLists.txt
snacc_vs/old_code/health_check/master/: master_main.cpp
snacc_vs/old_code/health_check/worker/: heartbeat_client.hpp  system_monitor.hpp
snacc_vs/old_code/health_check/worker/tests/: test_heartbeat_client.cpp
snacc_vs/proto/: heartbeat.grpc.pb.cc  heartbeat.grpc.pb.h  heartbeat.pb.cc  heartbeat.pb.h  heartbeat.proto
snacc_vs/worker/: CMakeLists.txt  heartbeat_client.cpp  heartbeat_client.hpp  system_monitor.cpp  system_monitor.hpp  worker.cpp  worker_main.cpp
snacc_vs/worker/tests/: CMakeLists.txt  mock_heartbeat_service.hpp  test_heartbeat_client.cpp
